Remove separate response from masking
